--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "pixelbandito-react-scripts": "3.5.0",
+    "emotion": "^10.0.27",
+    "emotion-theming": "^10.0.27",
+    "pixelbandito-react-scripts": "3.5.0-alpha.1",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "styled-components": "^5.0.1",
+    "styled-system": "^5.1.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -30,5 +34,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "hygen": "^5.0.3"
   }
 }
