--- a/package.json
+++ b/package.json
@@ -6,8 +6,12 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "classnames": "^2.2.6",
+    "color": "^3.1.2",
+    "color-convert": "^2.0.1",
     "emotion": "^10.0.27",
     "emotion-theming": "^10.0.27",
+    "mousetrap": "^1.6.5",
     "pixelbandito-react-scripts": "3.5.0-alpha.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
