--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "themetron-3",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://pixelbandito.github.io/themetron-3",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -23,7 +24,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -41,6 +44,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^2.2.0",
     "hygen": "^5.0.3"
   }
 }
