--- a/package.json
+++ b/package.json
@@ -10,15 +10,11 @@
     "classnames": "^2.2.6",
     "color": "^3.1.2",
     "color-convert": "^2.0.1",
-    "d3": "^5.15.0",
-    "emotion": "^10.0.27",
-    "emotion-theming": "^10.0.27",
     "mousetrap": "^1.6.5",
-    "pixelbandito-react-scripts": "3.5.0-alpha.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "styled-components": "^5.0.1",
-    "styled-system": "^5.1.5"
+    "react-scripts": "3.4.1",
+    "styled-components": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -44,7 +40,11 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/dom": "^7.1.3",
     "gh-pages": "^2.2.0",
-    "hygen": "^5.0.3"
+    "hygen": "^5.0.3",
+    "jest": "^24.9.0",
+    "react-is": "^16.13.1",
+    "typescript": "^3.7.5"
   }
 }
