--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "classnames": "^2.2.6",
     "color": "^3.1.2",
     "color-convert": "^2.0.1",
+    "lodash-es": "^4.17.15",
     "mousetrap": "^1.6.5",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
