--- a/workspaces/themed-ui-2/package.json
+++ b/workspaces/themed-ui-2/package.json
@@ -32,6 +32,8 @@
     "styled-system": "^5.1.5"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-export-default-from": "^7.8.3",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.8.3",
     "babel-eslint": "^10.0.3",
     "cross-env": "^7.0.2",
     "eslint": "^6.8.0",
