--- a/workspaces/themed-ui-2/package.json
+++ b/workspaces/themed-ui-2/package.json
@@ -36,6 +36,7 @@
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.8.3",
     "babel-eslint": "^10.0.3",
     "cross-env": "^7.0.2",
+    "enzyme": "^3.11.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-plugin-import": "^2.20.2",
@@ -47,6 +48,7 @@
     "eslint-plugin-standard": "^4.0.1",
     "gh-pages": "^2.2.0",
     "microbundle-crl": "^0.13.10",
+    "mocha": "^7.1.2",
     "npm-run-all": "^4.1.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
