Moving share theme utils to its own workspace

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "deploy": "gh-pages -d build"
   },
   "workspaces": [
+    "workspaces/theme",
     "workspaces/theme-editor",
     "workspaces/themed-ui"
   ]
