--- a/workspaces/themed-ui/example/package.json
+++ b/workspaces/themed-ui/example/package.json
@@ -7,7 +7,7 @@
     "react": "link:../../../node_modules/react",
     "react-dom": "link:../../../node_modules/react-dom",
     "react-scripts": "link:../../../node_modules/react-scripts",
-    "themed-ui": "link:../../.."
+    "@pixelbandito/themed-ui": "link:../../.."
   },
   "scripts": {
     "start": "node ../../../node_modules/react-scripts/bin/react-scripts.js start",
