--- a/workspaces/themed-ui/package.json
+++ b/workspaces/themed-ui/package.json
@@ -24,6 +24,7 @@
     "deploy": "gh-pages -d example/build"
   },
   "dependencies": {
+    "@pixelbandito/theme": "^1.0.0",
     "classnames": "^2.2.6",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
