--- a/workspaces/theme-editor/package.json
+++ b/workspaces/theme-editor/package.json
@@ -10,6 +10,7 @@
     "classnames": "^2.2.6",
     "color": "^3.1.2",
     "color-convert": "^2.0.1",
+    "font-picker-react": "^3.5.2",
     "lodash-es": "^4.17.15",
     "mousetrap": "^1.6.5",
     "react": "^16.13.1",
