--- a/workspaces/themed-ui/.eslintrc
+++ b/workspaces/themed-ui/.eslintrc
@@ -7,7 +7,8 @@
     "airbnb/hooks"
   ],
   "env": {
-    "node": true
+    "node": true,
+    "browser": true
   },
   "parserOptions": {
     "ecmaVersion": 2020,
