--- a/workspaces/theme/babel.config.json
+++ b/workspaces/theme/babel.config.json
@@ -1,6 +1,7 @@
 {
   "plugins": [
     "@babel/plugin-proposal-export-default-from",
-    "@babel/plugin-proposal-nullish-coalescing-operator"
+    "@babel/plugin-proposal-nullish-coalescing-operator",
+    "@babel/plugin-proposal-optional-chaining"
   ]
 }
