--- a/workspaces/theme/package.json
+++ b/workspaces/theme/package.json
@@ -19,6 +19,8 @@
   "devDependencies": {
     "@babel/plugin-proposal-export-default-from": "^7.8.3",
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.8.3",
+    "@babel/plugin-proposal-optional-chaining": "^7.10.0",
+    "@babel/plugin-syntax-optional-chaining": "^7.8.3",
     "microbundle": "^0.12.0"
   },
   "dependencies": {
