--- a/workspaces/themed-ui/package.json
+++ b/workspaces/themed-ui/package.json
@@ -39,7 +39,9 @@
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.8.3",
     "@babel/preset-env": "^7.10.4",
     "@babel/preset-react": "^7.10.4",
+    "@testing-library/dom": "^7.21.5",
     "@testing-library/react": "~10.4.7",
+    "@testing-library/user-event": "^12.0.15",
     "babel-eslint": "^10.0.3",
     "babel-jest": "^26.1.0",
     "cross-env": "^7.0.2",
