--- a/workspaces/themed-ui/.eslintrc
+++ b/workspaces/themed-ui/.eslintrc
@@ -27,5 +27,26 @@
     "space-before-function-paren": 0,
     "react/jsx-filename-extension": 0,
     "react/jsx-props-no-spreading": 0
-  }
+  },
+  "overrides": [
+    {
+        "files": ["**/__tests__/**/*.[jt]s?(x)", "**/?(*.)+(spec|test).[jt]s?(x)"],
+        "env": {
+          "node": true,
+          "browser": true,
+          "jest": true
+        }
+    },
+    {
+        "files": ["**/?(*.)+(screen-test).[tj]s?(x)", "**/jest.setup.[tj]s?(x)"],
+        "env": {
+          "node": true,
+          "browser": true,
+          "jest": true
+        },
+        "rules": {
+          "import/no-extraneous-dependencies": 0
+        }
+    }
+  ]
 }
