--- a/workspaces/themed-ui/example/package.json
+++ b/workspaces/themed-ui/example/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "themed-ui-example",
+  "name": "@pixelbandito/themed-ui-example",
   "homepage": "https://pixelbandito.github.io/themed-ui",
   "version": "0.0.0",
   "private": true,
