--- a/workspaces/themed-ui/package.json
+++ b/workspaces/themed-ui/package.json
@@ -22,9 +22,9 @@
     "test:build": "run-s build",
     "test:lint": "eslint .",
     "test:screen": "start-server-and-test storybook http-get://localhost:9009 jest:screen",
-    "test:unit": "cross-env CI=1 react-scripts test --env=jsdom",
+    "test:unit": "cross-env CI=1 react-scripts test --env=jsdom-fourteen",
     "test:watch": "react-scripts test --env=jsdom",
-    "test": "run-s test:unit test:lint test:build"
+    "test": "run-s test:unit test:lint test:build test:screen"
   },
   "dependencies": {
     "@pixelbandito/theme": "^1.0.0",
@@ -88,7 +88,6 @@
     "moduleNameMapper": {
       "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
       "\\.(css|less)$": "identity-obj-proxy"
-    },
-    "setupFilesAfterEnv": ["./jest.setup.js"]
+    }
   }
 }
