test: Add tests, move theme docs, add example theme, make getButtons take variant overrides

--- a/workspaces/theme/.eslintrc
+++ b/workspaces/theme/.eslintrc
@@ -26,5 +26,13 @@
     "space-before-function-paren": 0,
     "react/jsx-filename-extension": 0,
     "react/jsx-props-no-spreading": 0
-  }
+  },
+  "overrides": [
+    {
+      "files": ["*.test.js", "*.test.mjs"],
+      "rules": {
+        "import/no-extraneous-dependencies": "off"
+      }
+    }
+  ]
 }
