--- a/workspaces/theme/babel.config.json
+++ b/workspaces/theme/babel.config.json
@@ -1,4 +1,14 @@
 {
+  "presets": [
+    [
+      "@babel/preset-env",
+      {
+        "targets": {
+          "node": "current"
+        }
+      }
+    ]
+  ],
   "plugins": [
     "@babel/plugin-proposal-export-default-from",
     "@babel/plugin-proposal-nullish-coalescing-operator",
