--- a/workspaces/theme/package.json
+++ b/workspaces/theme/package.json
@@ -14,16 +14,38 @@
   },
   "scripts": {
     "build": "microbundle",
-    "start": "microbundle --watch"
+    "start": "microbundle --watch",
+    "test": "jest"
   },
   "devDependencies": {
+    "@babel/core": "^7.11.6",
     "@babel/plugin-proposal-export-default-from": "^7.8.3",
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.8.3",
     "@babel/plugin-proposal-optional-chaining": "^7.10.0",
     "@babel/plugin-syntax-optional-chaining": "^7.8.3",
+    "@babel/preset-env": "^7.11.5",
+    "@jest/globals": "^26.4.2",
+    "babel-jest": "^26.3.0",
+    "jest": "^26.4.2",
     "microbundle": "^0.12.0"
   },
   "dependencies": {
     "color-convert": "^2.0.1"
+  },
+  "jest": {
+    "testMatch": [
+      "**/__tests__/**/*.?(m)js?(x)",
+      "**/?(*.)(spec|test).?(m)js?(x)"
+    ],
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "jsx",
+      "node",
+      "mjs"
+    ],
+    "transform": {
+      "^.+\\.m?js$": "babel-jest"
+    }
   }
 }
